# FastAPItest

./: .gitignore  Dockerfile  alembic.ini  docker-compose.yml  main.py  pyproject.toml  start.sh
app/: database.py  models.py
app/handlers/: auth.py  events.py
app/schemas/: auth.py  events.py
app/services/: auth.py  events.py  users.py
migrations/: env.py
migrations/versions/: 97499c06ead0_002_add_is_admin_in_user_model.py  aa65a6a0d9d5_003_add_is_admin_in_user_model.py  bc6ca3061404_004_manytomany_users_events.py  e841c8bb5871_001_init.py
